[package]
name = "sscpu_wasm"
version = "0.1.0"
edition = "2021"
description = "sscpu wasm"
license = "LICENSE.md"
repository = ""

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
gloo-utils = { version = "0.1", features = ["serde"] }
