[package]
name = "sscpu"
version = "0.1.0"
edition = "2021"
description = "Rust and WebAssembly proof of concept ISA emulator"
license = "LICENSE.md"
repository = "https://github.com/arkeane/sscpu"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
gloo-utils = { version = "0.1", features = ["serde"] }
